Fixed column overflow, added abbr.

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-article h2 {
+.title,
+.abbv {
     text-align: center;
 }
 
@@ -17,7 +18,6 @@ article h2 {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-
 }
 
 .card-header {
@@ -25,6 +25,7 @@ article h2 {
     display: flex;
     justify-content: center;
     padding: 0 .5rem;
+    /* margin-bottom: 1em; */
     color: white;
     font-size: calc(1em + .25vw);
 }
@@ -49,21 +50,24 @@ article h2 {
     margin-bottom: .5em;
 }
 
-details {
-    width: 100%;
-    margin-top: auto;
-    background: hsl(0, 0%, 90%);
-    box-shadow: 0 .5rem 1rem -.5rem rgba(0, 0, 0, .4);
-    border-radius: 5px;
-    overflow: hidden;
-    line-height: 1.5;
-    font-family: "Open Sans", "Helvetica Neue", Verdana, Arial, Helvetica, sans-serif;
+abbr {
+    cursor: help;
 }
 
-details[open] {
-    background: rgb(0 0 0 / 0.2);
-    outline: 1rem solid var(--bg);
-    margin: 0 0 2rem 0;
+details {
+    width: 100%;
+    margin: 0 auto;
+    margin-top: auto;
+    background: hsl(0, 0%, 90%);
+    margin-bottom: .5rem;
+    box-shadow: 0 .1rem 1rem -.5rem rgba(0, 0, 0, .4);
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+details p {
+    padding: 0 .25em;
+    line-height: 1.5
 }
 
 summary {
@@ -73,6 +77,12 @@ summary {
     padding-left: 2.2rem;
     position: relative;
     cursor: pointer;
+}
+
+
+
+summary::-webkit-details-marker {
+    display: none
 }
 
 summary:before {
